- Updated the code to ensure compatibility with the latest Spring Boot release.