@@ -23,24 +23,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.TimeUnit;
 
-import jakarta.annotation.Resource;
 import jakarta.servlet.http.HttpServletRequest;
 
-import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.jsoup.Jsoup;
-import org.jsoup.nodes.Comment;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.parser.Parser;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
 
-import com.google.common.base.Stopwatch;
 import com.viglet.shio.persistence.model.folder.ShFolder;
 import com.viglet.shio.persistence.model.object.impl.ShObjectImpl;
 import com.viglet.shio.persistence.model.post.ShPost;
@@ -53,13 +41,8 @@ import com.viglet.shio.persistence.repository.post.ShPostRepository;
 import com.viglet.shio.post.type.ShSystemPostType;
 import com.viglet.shio.post.type.ShSystemPostTypeAttr;
 import com.viglet.shio.utils.ShFolderUtils;
-import com.viglet.shio.utils.ShPostUtils;
-import com.viglet.shio.website.cache.component.ShCacheJavascript;
 import com.viglet.shio.website.cache.component.ShCachePageLayout;
-import com.viglet.shio.website.cache.component.ShCachePreviewHtml;
-import com.viglet.shio.website.cache.component.ShCacheRegion;
 import com.viglet.shio.website.component.ShSitesPageLayout;
-import com.viglet.shio.website.nashorn.ShNashornEngineProcess;
 import com.viglet.shio.website.utils.ShSitesFolderUtils;
 import com.viglet.shio.website.utils.ShSitesPageLayoutUtils;
 import com.viglet.shio.website.utils.ShSitesPostUtils;
@@ -69,7 +52,6 @@ import com.viglet.shio.website.utils.ShSitesPostUtils;
  */
 @Component
 public class ShSitesContextComponent {
-	static final Logger logger = LogManager.getLogger(ShSitesContextComponent.class);
 	@Autowired
 	private ShPostRepository shPostRepository;
 	@Autowired
@@ -78,35 +60,24 @@ public class ShSitesContextComponent {
 	private ShFolderUtils shFolderUtils;
 	@Autowired
 	private ShSitesFolderUtils shSitesFolderUtils;
-	@Autowired
-	private ShPostUtils shPostUtils;
+
 	@Autowired
 	private ShSitesPostUtils shSitesPostUtils;
 	@Autowired
-	private ShCacheRegion shCacheRegion;
-	@Autowired
 	private ShCachePageLayout shCachePageLayout;
 	@Autowired
-	private ShCacheJavascript shCacheJavascript;
-	@Autowired
-	private ShNashornEngineProcess shNashornEngineProcess;
-	@Autowired
 	private ShSitesPageLayoutUtils shSitesPageLayoutUtils;
-	@Autowired
-	private ShCachePreviewHtml shCachePreviewHtml;
-	@Resource
-	private ApplicationContext context;
+
 	private static final String SEPARATOR = "/";
 
 	public String folderPathFactory(List<String> contentPath) {
 		StringBuilder folderPath = new StringBuilder("/");
 		if (!contentPath.isEmpty()) {
-			List<String> folderPathArray = contentPath;
 
-			// Remove PostName
-			folderPathArray.remove(folderPathArray.size() - 1);
+            // Remove PostName
+			contentPath.removeLast();
 
-			for (String path : folderPathArray) {
+			for (String path : contentPath) {
 				folderPath.append(path.concat(SEPARATOR));
 			}
 
@@ -146,10 +117,9 @@ public class ShSitesContextComponent {
 
 		// If shPostItem is not null, so is a Post, otherwise is a Folder
 		if (objectName != null) {
-			ShFolder shParentFolder = shFolder;
-			shObjectItem = shPostRepository.findByShFolderAndFurl(shParentFolder, objectName);
+            shObjectItem = shPostRepository.findByShFolderAndFurl(shFolder, objectName);
 			if (shObjectItem == null)
-				shObjectItem = shPostRepository.findByShFolderAndTitle(shParentFolder, objectName);
+				shObjectItem = shPostRepository.findByShFolderAndTitle(shFolder, objectName);
 		}
 
 		if (shObjectItem != null) {
@@ -228,76 +198,5 @@ public class ShSitesContextComponent {
 		return shCachePageLayout.cache(shSitesPageLayout, request, shSite, mimeType);
 	}
 
-	public Document shRegionFactory(ShSitesPageLayout shSitesPageLayout, String regionResult, ShSite shSite,
-			String mimeType, HttpServletRequest request) {
-		StringBuilder shObjectJS = shCacheJavascript.shObjectJSFactory();
-		Document doc = null;
-		if (shSitesPageLayout.getPageCacheKey().endsWith(".json") || mimeType.equals("json") || mimeType.equals("xml"))
-			doc = Jsoup.parse(regionResult, StringUtils.EMPTY, Parser.xmlParser());
-		else
-			doc = Jsoup.parse(regionResult);
 
-		for (Element element : doc.getElementsByAttribute("sh-region")) {
-			String cachedRegion = null;
-			String regionName = element.attr("sh-region");
-			if (shCacheRegion.isCached(regionName, shSite.getId()))
-				cachedRegion = shCacheRegion.templateScopeCache(regionName, shSitesPageLayout, shSite, shObjectJS,
-						mimeType, request);
-			else
-				cachedRegion = this.regionProcess(regionName, shSitesPageLayout, shSite, mimeType, request);
-
-			if (cachedRegion != null)
-				element.html(cachedRegion).unwrap();
-			else {
-				element.html("<div> Region Error </div>").unwrap();
-				logger.error("Region Error");
-			}
-		}
-		return doc;
-	}
-
-	public String regionProcess(String regionName, ShSitesPageLayout shSitesPageLayout, ShSite shSite, String mimeType,
-			HttpServletRequest request) {
-		ShPost shRegion = getRegion(regionName, shSite.getId());
-		if (shRegion != null) {
-			Stopwatch stopwatch = Stopwatch.createStarted();
-			Map<String, ShPostAttr> shRegionPostMap = shSitesPostUtils.postToMap(shRegion);
-
-			String shRegionJS = shRegionPostMap.get(ShSystemPostTypeAttr.JAVASCRIPT).getStrValue();
-
-			String shRegionHTML = shRegionPostMap.get(ShSystemPostTypeAttr.HTML).getStrValue();
-
-			Object regionResultChild = shNashornEngineProcess.render(regionName, shRegionJS, shRegionHTML, request,
-					shSitesPageLayout.getShContent());
-
-			String regionHTML = this
-					.shRegionFactory(shSitesPageLayout, regionResultChild.toString(), shSite, mimeType, request).html();
-
-			stopwatch.stop();
-
-			long timeProcess = stopwatch.elapsed(TimeUnit.MILLISECONDS);
-
-			Comment comment = new Comment(String.format(" sh-region: %s, id: %s, processed in: %s ms ", regionName,
-					shRegion.getId(), String.valueOf(timeProcess)));
-			String previewRegion = shCachePreviewHtml.shPreviewRegionFactory();
-
-			return previewRegion.replace("{{content}}", String.format("%s%s", comment.toString(), regionHTML));
-
-		}
-		return null;
-
-	}
-
-	public ShPost getRegion(String regionName, String siteId) {
-		List<ShPost> shRegionPosts = shPostRepository.findByTitle(regionName);
-		ShPost shRegion = null;
-		if (shRegionPosts != null) {
-			for (ShPost shRegionPost : shRegionPosts) {
-				if (shPostUtils.getSite(shRegionPost).getId().equals(siteId))
-					shRegion = shRegionPost;
-			}
-
-		}
-		return shRegion;
-	}
 }
